--- a/ApiBiblioteca/src/main/resources/application.properties
+++ b/ApiBiblioteca/src/main/resources/application.properties
@@ -1,16 +1,17 @@
 server.port= 8090
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.error.whitelabel.enabled= true
 
-spring.datasource.url= jdbc:mysql://localhost:3306/libreria
+spring.datasource.url= jdbc:mysql://localhost:3306/libreria?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 spring.datasource.username = root
 
 spring.datasource.password = 1234
 
 spring.jpa.show-sql = true
-spirng.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
+
 spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
