--- a/ApiBiblioteca/src/main/resources/application.properties
+++ b/ApiBiblioteca/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#spring.mvc.view.prefix=/WEB-INF/vistas/
+#spring.mvc.view.suffix=.jsp
+
 server.port= 8090
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -12,6 +15,8 @@ spring.datasource.password = 1234
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 
-spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.hibernate.naming.implicit-strategy= org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
