--- a/ApiBiblioteca/pom.xml
+++ b/ApiBiblioteca/pom.xml
@@ -57,7 +57,11 @@
       <scope>provided</scope>
     </dependency>
 
-   
+   <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.3.0</version>
+</dependency>
     
 	</dependencies>
 
